added basket repository

--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "CacheSettings": {
+    "ConnectionString": "localhost:6378" 
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
